[package]
name = "rubspace"
authors = ["Daniel Loman", "Dan Loman <loman.daniel@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "server"
#path = "src/server.rs"
#
#[[bin]]
#name = "client"
#path = "src/main.rs"

[dependencies]
protobuf = "3.4.0"
bit-set = "0.5.3"
